@@ -1,3 +1,7 @@
+* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.5.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Thu Jan 21 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.5
 - Fixed:
   - Now use the simplib__crypto_policy_state fact instead of
